Continuing home page implementation

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -24,4 +24,31 @@
       <ion-icon name="send"></ion-icon>
     </ion-button>
   </ion-row>
+
+
+  <ion-row class="bottom-bar">
+    <ion-item-divider color="success">
+      Luidi Matheus
+    </ion-item-divider>
+
+    <ion-item>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis ex impedit iste qui maxime, asperiores, perferendis repellat, culpa neque nisi eligendi. Fugit, sunt autem. Fuga provident obcaecati quos. Omnis, dolores!
+    </ion-item>
+
+    <ion-col>
+      <ion-button fill="clear" size="small" color="success">
+        <ion-icon slot="start" name="thumbs-up"></ion-icon>
+        <small>12 likes</small>
+      </ion-button>
+
+      <ion-button fill="clear" size="small" color="success">
+        <ion-icon slot="start" name="text"></ion-icon>
+        <small>12 comments</small>
+      </ion-button>
+
+      <ion-button fill="clear" size="small" color="success">
+        <small>12 mins ago</small>
+      </ion-button>
+    </ion-col>
+  </ion-row>
 </ion-content>
