--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -14,5 +14,14 @@
 }
 
 .bottom-bar {
-  background-color: var(--ion-color-light);
+  padding: 15px;
+
+  ion-col {
+    background-color: var(--ion-color-light);
+  }
+}
+
+.post {
+  width: 100%;
+  padding: 10px;
 }
