Impruving UX layout

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,9 +14,9 @@
 
 <ion-content [fullscreen]="true">
   <ion-row class="row">
-    <ion-button fill="clear" color="success">
+    <!-- <ion-button fill="clear" color="success">
       <ion-icon name="images"></ion-icon>
-    </ion-button>
+    </ion-button> -->
 
     <ion-input type="text" placeholder="Say something, tell us..." [(ngModel)]="textPost"></ion-input>
 
